--- a/resource-bundles/ngForce.resource/ngForce/css/bootstrap-custom.css
+++ b/resource-bundles/ngForce.resource/ngForce/css/bootstrap-custom.css
@@ -22,3 +22,11 @@
   -moz-background-clip: padding-box;
   background-clip: padding-box;
 }
+
+.row-fluid ul.thumbnails li.span12 + li { margin-left : 0px;clear:left }
+.row-fluid ul.thumbnails li.span6:nth-child(2n + 3) { margin-left : 0px;clear:left }
+.row-fluid ul.thumbnails li.span4:nth-child(3n + 4) { margin-left : 0px;clear:left }
+.row-fluid ul.thumbnails li.span3:nth-child(4n + 5) { margin-left : 0px; clear:left}
+.row-fluid ul.thumbnails li.span2:nth-child(6n + 7) { margin-left : 0px;clear:left }
+.row-fluid ul.thumbnails li.span1:nth-child(12n + 13) { margin-left : 0px;clear:left }
+.first-in-row { margin-left: 0 !important; }​
