--- a/src/pages/ngForceDemo.page
+++ b/src/pages/ngForceDemo.page
@@ -1,18 +1,19 @@
-<apex:page showHeader="false" standardstylesheets="false" sidebar="false" standardController="Opportunity">
+<apex:page docType="html-5.0" showHeader="false" standardstylesheets="false" sidebar="false" standardController="Opportunity">
 
 <!-- Css -->
 	<apex:stylesheet value="{!URLFOR($Resource.LABJS_Bootstrap, 'bootstrap231/css/bootstrap.min.css')}"/>
-  <apex:stylesheet value="{!URLFOR($Resource.ngForce, 'ngForce/css/bootstrap-custom.css')}"/> 
+	<apex:stylesheet value="{!URLFOR($Resource.LABJS_Bootstrap, 'bootstrap231/css/bootstrap-responsive.min.css')}"/>  
+	<apex:stylesheet value="{!URLFOR($Resource.ngForce, 'ngForce/css/bootstrap-custom.css')}"/> 
 
 <!-- Javascript -->
 	<apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/js/jquery-2.0.0.min.js')}"/>
 	<apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/js/angular.min.1.1.4.js')}"/>
-  <apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/js/angular-ui.min.js')}"/>
-  <apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/js/ui-bootstrap-tpls-0.3.0.js')}"/>
-	<apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/js/log.js')}"/>
+	<apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/js/angular-ui.min.js')}"/>
+	<apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/js/ui-bootstrap-tpls-0.3.0.min.js')}"/>
+	<apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/js/log.min.js')}"/>
 
 <!-- This is the ngForce module and service that provides VF Remoting access to the API -->
-	<apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/services/ngForce.js')}"/>
+	<apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/services/ngForce.min.js')}"/>
 
 <!-- Angular Modules -->
 <!-- This includes the module that defines our application -->
@@ -21,88 +22,84 @@
 <!-- Angular Services -->
 
 <!-- Angular Controllers -->
-  <apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/controllers/oppBoxCtrl.js')}"/>
-  <apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/controllers/navCtrl.js')}"/>
-  <apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/controllers/oppDetailsCtrl.js')}"/>
+	<apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/controllers/oppBoxCtrl.js')}"/>
+	<apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/controllers/navCtrl.js')}"/>
+	<apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/controllers/oppDetailsCtrl.js')}"/>
 
 <!-- Angular Directives -->
-	<apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/directives/oppBox.js')}"/>
-  <apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/directives/oppDetails.js')}"/>
+	<apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/directives/oppBox.min.js')}"/>
+	<apex:includeScript value="{!URLFOR($Resource.ngForce, 'ngForce/directives/oppDetails.min.js')}"/>
 
 <body ng-app="ngForceDemo">
-    <apex:form>
-    	<c:RemoteTk/>
-    </apex:form>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">ngForce Opportunities Demo</a>
-          <div class="nav-collapse collapse">
-            <p class="navbar-text pull-right">
-              Logged in as <a href="#" class="navbar-link">{!$User.userName}</a>
-            </p>
-            <ul class="nav">
-              <li class="active"><a href="#">Demo</a></li>
-              <li><a href="/006/o">Return to Standard View</a></li>
-              <li><a href="http://www.twitter.com/codefriar">@codefriar</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
-    
-    <div class="container-fluid">
-      <div class="row-fluid">
-        <div class="span3">
-          <div class="well sidebar-nav" ng-controller="navCtrl">
-            <ul class="nav nav-list">
-              <li class="nav-header">Filter Opportunities By StageName</li>
-              <li>
-                <a href="#" ng-click="broadcastFilter('')">Show All</a>
-              </li>
-              <li ng-repeat="name in stageNames">
-                <a href="#" ng-click="broadcastFilter(name.label)">{{name.label}}</a>
-              </li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span w/ navCtrl-->
-        <div class="span9" ng-controller="oppBoxCtrl">
-          <opp-box></opp-box>
-        </div><!--/span-->
-			</div><!--/row-->
-    
-      <hr></hr>
-      <footer>
-        <p><a href="http://www.codefriar.com">© Ignoti et Quasi Oculti Declaravimus - 2013</a></p>
-      </footer>
-    
-    </div><!--/.fluid-container-->
-    
+	<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container-fluid">
+				<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="brand" href="#">ngForce Demo</a>
+				<div class="nav-collapse collapse">
+					<p class="navbar-text pull-right">
+						Logged in as <a href="#" class="navbar-link">{!$User.userName}</a>
+					</p>
+					<ul class="nav">
+						<li><a href="/006/o">Return to Standard View</a></li>
+						<li><a href="http://www.twitter.com/codefriar">@codefriar</a></li>
+					</ul>
+				</div><!--/.nav-collapse -->
+			</div>
+		</div>
+	</div>
+		
+	<div class="container-fluid">
+		<div class="row-fluid">
+			<div class="span3">
+				<div class="well sidebar-nav" ng-controller="navCtrl">
+					<ul class="nav nav-list">
+						<li class="nav-header">Filter Opportunities By StageName</li>
+						<li>
+							<a href="#" ng-click="broadcastFilter('')">Show All</a>
+						</li>
+						<li ng-repeat="name in stageNames">
+							<a href="#" ng-click="broadcastFilter(name.label)">{{name.label}}</a>
+						</li>
+					</ul>
+				</div><!--/.well -->
+			</div><!--/span w/ navCtrl-->
+			<div class="span9" ng-controller="oppBoxCtrl">
+				<opp-box></opp-box>
+			</div><!--/span-->
+		</div><!--/row-->
+		
+		<hr></hr>
+		<footer>
+			<c:ngForce/>
+			<p><a href="http://www.codefriar.com">© Ignoti et Quasi Oculti Declaravimus - 2013</a></p>
+		</footer>
+		
+	</div><!--/.fluid-container-->
 
-    <style>
-      
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-      .sidebar-nav {
-        padding: 9px 0;
-      }
-      
-      @media (max-width: 980px) {
-        /* Enable use of floated navbar text */
-        .navbar-text.pull-right {
-          float: none;
-          padding-left: 5px;
-          padding-right: 5px;
-        }
-      }
-      
-    </style>
-  </body>
+	<style>
+	
+		body {
+			padding-top: 60px;
+			padding-bottom: 40px;
+		}
+		.sidebar-nav {
+			padding: 9px 0;
+		}
+		
+		@media (max-width: 980px) {
+			/* Enable use of floated navbar text */
+			.navbar-text.pull-right {
+				float: none;
+				padding-left: 5px;
+				padding-right: 5px;
+			}
+		}
+		
+	</style>
+</body>
 </apex:page>
